# bedrock-proxy

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
policys/: aws_bedrock.json
src/: handlers.rs  main.rs  signing.rs  state.rs  transform.rs
