[package]
name = "bedrock-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
aws-sigv4 = "1.3.4"
http = "1.0"
dotenvy = "0.15"
futures-util = "0.3"
async-stream = "0.3"
aws-credential-types = "1.2.6"
urlencoding = "2.1"
aws-sdk-bedrockruntime = "1.106.0"
